Intro Style.css
.container {
    font-size: 2rem;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    font-weight: 200;
}

#titleHeader {
    border-bottom: 1px solid black;
    text-align: center;
    padding-bottom: 1.5rem;
}

h1 {
    margin-bottom: .5rem;
}

#created {
    font-size: 1.5rem;
}

.introduction {
    border-bottom: 1px solid black;
    border-bottom: 2rem;
    border-bottom: 1px solid black;
    margin-bottom: 2rem;
    padding-left: 2rem;
}

img {
    object-fit: cover;
    width: 40rem;
    border-radius: 1em;
    border: 1.5px solid black;
    
}

#imageRow1 {
    display: flex;
    justify-content: center;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-bottom: 3rem;
    
}

#tacoHome, #carnitasTaco {
    border: 1px solid black;
    margin-right: 1rem;
    margin-left: 1rem;
}

h3 {
    text-decoration: underline;
}

.features {
    padding-left: 2rem;
    border-bottom: 1px solid black;
    padding-bottom: 1rem;
    clear: both;
    align-items: center;
    justify-content: center;
    display: flex;
}

#barbacoaPic {
    float: right;

    
}

.background {
    padding-left: 2rem;
    padding-bottom: 2rem;
}

